Shrank name text to stop wrapping

--- a/_sass/_additions.scss
+++ b/_sass/_additions.scss
@@ -96,7 +96,7 @@ a.logo-grid-item {
   vertical-align: top;
   text-align: center;
   .name {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
   }
   .role {
